<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/f_hint"
        android:inputType="textPersonName"
        android:text="@string/fname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/l_hint"
        android:inputType="textPersonName"
        android:text="@string/lname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <TextView
        android:id="@+id/select_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="44dp"
        android:text="@string/sgender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/gender_image"
        android:layout_width="167dp"
        android:layout_height="120dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="269dp"
        android:contentDescription="@string/gender_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/screen_background_light_transparent" />

    <RadioGroup
        android:id="@+id/radio_grp"
        android:layout_width="294dp"
        android:layout_height="62dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_image">

        <RadioButton
            android:id="@+id/female_radio"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:text="@string/fradio" />

        <RadioButton
            android:id="@+id/male_radio"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:text="@string/mradio" />
    </RadioGroup>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="32dp"
        android:text="@string/sbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_grp" />

</androidx.constraintlayout.widget.ConstraintLayout>