<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">


    <EditText
        android:id="@+id/edit_f_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/efname"
        android:inputType="textPersonName"
        android:text="@string/e_fname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/e_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/elname"
        android:inputType="textPersonName"
        android:text="@string/e_lname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_f_name" />

    <ImageView
        android:id="@+id/e_image"
        android:layout_width="207dp"
        android:layout_height="173dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/e_u_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_last_name"
        app:srcCompat="@android:drawable/toast_frame" />

    <RadioGroup
        android:id="@+id/e_radio_grp"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_image">

        <RadioButton
            android:id="@+id/e_fradio"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/efradio" />

        <RadioButton
            android:id="@+id/e_m_radio"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:text="@string/emradio" />
    </RadioGroup>

    <Button
        android:id="@+id/e_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="4dp"
        android:text="@string/esavebtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_radio_grp" />

    <TextView
        android:id="@+id/e_select_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:text="@string/esgender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_last_name" />
</androidx.constraintlayout.widget.ConstraintLayout>